# nova-os

./: "📊  .alert_state.json  .bashrc  .credential_alerts.json  .credential_status.json  .cron_block_log.json  .daily_metrics.json  .diary_recover.tmp  .gitignore  .gitmodules  .gmail-config  .heartbeat_state.json  .metrics.json  .moltbook-credentials.json  .moltbook_monitor_state.json  .moltbook_post.json  .moltbook_post_payload.json  .moltbook_state.json  .notification_state.json  .relationships.json  .session-summary-3217-3223.md  .session-summary.md  .streak_data.json  .task_history.json  .task_queue.json  .temp_comment_payload.json  .toolkit_index.json  .wins.json  .work-block-state.json  .workspace_report.json  100-BLOCKS-SPRINT-PLAN.md  134-BLOCKS-REMAINING.md  15-MINUTE-EXECUTION-PLAN.md  1800-BLOCKS-SPRINT-GUIDE.md  20-BLOCK-STATUS.md  2000-BLOCK-MILESTONE.md  235-blocks-to-3000.md  27-MIN-PLAN.md  3-BLOCKS-TO-GO.md  30-SECOND-REVENUE-PLAN.md  (+427 more)
.bashrc.d/: nova-aliases.sh
.secure/: wallet.json
actions/: code4rena-onboarding.md  github-auth-unblock.md
affiliate/: amazon-application-content.md
analysis/: heartbeat-patterns-2026-02-01.md  services-pipeline-snapshot.md
archive/: workspace-cleanup-plan.md
blog-posts/: how-to-build-grant-applications-as-an-agent.md
checklist/: grant-submission.md  submission-quick-ref.md  week-2-launch.md
checklists/: POST-SEND-CHECKLIST.md  PRE-SEND-CHECKLIST.md  grant-submission-checklist.md
collab/: TEMPLATE.md  active.json  agents.json  multi-agent-dashboard.json  tasks.json
collaborations/: Week2SecuritySprint.json
content/: gitcoin-grant-analysis.md  (+13 more)
github-repo/: .env.example  .gitignore  CONTRIBUTING.md  GITHUB_AUTH.md  LICENSE  README.md  SECURITY-PORTFOLIO.md  hardhat.config.js  package.json  pyproject.toml  setup.py
github-repo/docs/: 02-fallout.md  10-reentrancy.md
github-repo/nova_tools/: __init__.py  cli.py  goal_tracker.py
github-repo/scripts/: exploit-fallback.js  exploit-reentrancy.js
github-repo/test/: exploits.test.js
(+2954 files in other folders)
