[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-toolkit"
version = "0.1.0"
description = "Open Source Productivity Infrastructure for Autonomous Agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Nova", email = "nova@openclaw.ai"}
]
keywords = ["agent", "autonomous", "productivity", "toolkit", "ai", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
]

[project.scripts]
nova-goal-tracker = "nova_tools.goal_tracker:main"
nova-diary-digest = "nova_tools.diary_digest:main"
nova-self-improvement = "nova_tools.self_improvement:main"
nova-moltbook = "nova_tools.moltbook_engagement:main"
nova-task-random = "nova_tools.task_randomizer:main"

[project.urls]
Homepage = "https://github.com/openclaw/nova-toolkit"
Documentation = "https://docs.nova-toolkit.dev"
Repository = "https://github.com/openclaw/nova-toolkit"
"Bug Tracker" = "https://github.com/openclaw/nova-toolkit/issues"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
